// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Rendering Render the Card component with default props 1`] = `
<Layer
  className="Card"
>
  <a
    className="Card__link"
  >
    <div>
      <span
        className="Card__title"
      >
        Add Host record
      </span>
    </div>
    <div
      className="Card__iconContainer"
    >
      <ArrowRight
        className="Card__arrowRight"
        size={20}
      />
    </div>
  </a>
</Layer>
`;

exports[`Card Rendering Render the Card component with props 1`] = `
<Layer
  className="Card test_cn"
>
  <a
    className="Card__link"
    href="#"
  >
    <div>
      <span
        className="Card__title"
      >
        Add Host Record
      </span>
      <span
        className="Card__description"
      >
        Add a host record on BAM
      </span>
    </div>
    <div
      className="Card__iconContainer"
    >
      <ArrowRight
        className="Card__arrowRight"
        size={20}
      />
    </div>
  </a>
</Layer>
`;

exports[`Card Rendering Render the Card component with pseudo translated text 1`] = `
<Layer
  className="Card test_cn"
>
  <a
    className="Card__link"
    href="#"
  >
    <div>
      <span
        className="Card__title"
      >
        Add Host Record
      </span>
      <span
        className="Card__description"
      >
        Add a host record on BAM
      </span>
    </div>
    <div
      className="Card__iconContainer"
    >
      <ArrowRight
        className="Card__arrowRight"
        size={20}
      />
    </div>
  </a>
</Layer>
`;
